# gu-trainer

./: .gitmodules  Q & A (for visitors)  R.O. Activity Guideline ; What everyone is doing  README.md  groupdb  map.bzw  maps.list  server.conf
PyrJumpHelper/: SPECIFICATION  smallerworld.bzw  smallworld.bzw
PyrJumpHelper/pyrJumpHelper/: .gitignore  Makefile.am  compileme.sh  pyrJumpHelper.cpp
plugins/: compileAll.sh  compilePlugin.sh
